Converting tabs to spaces, fixing some 500 errors, future-proofing

--- a/flasktasks/templates/base.html
+++ b/flasktasks/templates/base.html
@@ -21,8 +21,8 @@
                     <li class="{{ url_for('missions') | is_current_page }}">
                         <a href="{{ url_for('missions') }}">Missions</a>
                     </li>
-                    <li class="{{ url_for('tasks') | is_current_page }}">
-                        <a href="{{ url_for('tasks') }}">Tasks</a>
+                    <!--<li class="{{ url_for('tasks') | is_current_page }}">
+                        <a href="{{ url_for('tasks') }}">Tasks</a>-->
                     </li>
                 </ul>
             </div>
