--- a/flasktasks/templates/task/index.html
+++ b/flasktasks/templates/task/index.html
@@ -10,6 +10,7 @@
             <h4>{{ mission.title }}, <small>{{ mission.description }}</small></h4>
             <div class="btn-group task-control" role="group">
                 <a href="{{ url_for('new_task', mission_id=mission.id) }}" class="btn btn-link new-item"><span class="glyphicon glyphicon-plus"></span>New Task</a>
+				<a href="{{ url_for('future') }}" id="edit-task" class="btn btn-link"><span class="glyphicon glyphicon-cog"></span>Edit Mission</a>
                 <a href="{{ url_for('delete_mission', mission_id=mission.id) }}" id="delete-mission" class="btn btn-link"><span class="glyphicon glyphicon-trash"></span>Remove</a>
             </div>
         </div>
