--- a/flasktasks/templates/task/task.html
+++ b/flasktasks/templates/task/task.html
@@ -18,6 +18,7 @@
                 <a href="{{ url_for('set_status', task_id=task.id, status='done') }}" class="btn btn-success">Done</a>
             </div>
             <div class="btn-group btn-group-justified" role="group">
+				<a href="{{ url_for('edit_task', task_id=task.id) }}" id="edit-task" class="btn btn-link"><span class="glyphicon glyphicon-cog"></span>Edit</a>
                 <a href="{{ url_for('delete_task', task_id=task.id) }}" id="delete-task" class="btn btn-link"><span class="glyphicon glyphicon-trash"></span>Remove</a>
             </div>
         </div>
